nouveau CV HTML/CSS

--- a/mon_cv_github_2.html
+++ b/mon_cv_github_2.html
@@ -31,15 +31,13 @@
 					</p>
 				</section>				
 		
-				<section class="competence">
-				<h2>Mes compétences</h2>	
+				<section class="ambition">
+				<h2>Mes ambitions</h2>	
 					
 					<p>
 						<ul>
-							<li> Rédaction de bail, état des lieux et tout acte administratif s'y afférant </li>
-							<li> Recherche locative, publicité </li>
-							<li> Traitement comptable de l'ensemble des opérations de gestion </li>
-							<li> Médiation, relance des impayés, accueil téléphonique et public </li>
+							<li> Créér ma structure après la formation </li>
+							<li> Travailler dans un espace de Co-working </li>
 						</ul>	
 					</p>
 				</section>	
@@ -49,7 +47,7 @@
 					<p>
 						<ul>
 							<li> BTS en Alternance des professions immobilières jusqu'en 2003</li>
-							<li> Formation Webogreen à partir de fin novembre 2015 jusqu'à mai 2016 </li>
+							<li> Bac Technique Compta-Gestion </li>
 						</ul>
 					</p>
 				</section>	
@@ -59,7 +57,7 @@
 		<footer> 
 			<div>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.0696656721866!2d5.3801603156019535!3d49.16128588728561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47eb1c07d26407a5%3A0x4226fc2808320bf1!2s22+Rue+de+la+Belle+Vierge%2C+55100+Verdun!5e0!3m2!1sfr!2sfr!4v1448730005932" frameborder="0" style="border:0" allowfullscreen></iframe>
-				<a class="mailing" href="mailto:benjamin.moncey@gmail.com">Me contacter </a>
+				<a class="_mail" href="mailto:benjamin.moncey@gmail.com">Me contacter </a>
 			</div>
 		</footer>
 	</body>
