nouvelle version html/css

--- a/mon_cv_github_2.html
+++ b/mon_cv_github_2.html
@@ -56,8 +56,10 @@
 		
 		<footer> 
 			<div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.0696656721866!2d5.3801603156019535!3d49.16128588728561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47eb1c07d26407a5%3A0x4226fc2808320bf1!2s22+Rue+de+la+Belle+Vierge%2C+55100+Verdun!5e0!3m2!1sfr!2sfr!4v1448730005932" frameborder="0" style="border:0" allowfullscreen></iframe>
-				<a class="_mail" href="mailto:benjamin.moncey@gmail.com">Me contacter </a>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.0696656721866!2d5.3801603156019535!3d49.16128588728561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47eb1c07d26407a5%3A0x4226fc2808320bf1!2s22+Rue+de+la+Belle+Vierge%2C+55100+Verdun!5e0!3m2!1sfr!2sfr!4v1448730005932" ></iframe>
+				<p>
+					<a class="_mail" href="mailto:benjamin.moncey@gmail.com">Me contacter</a>
+				</p>
 			</div>
 		</footer>
 	</body>
