--- a/mon_cv_github_2.html
+++ b/mon_cv_github_2.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8"/>
@@ -26,7 +26,6 @@
 					<p>
 						<ul>
 							<li> <strong>De Septembre 2003 à Mars 2015 : </strong> Salarié en Gestion immobilière </li>
-							
 						</ul>	
 					</p>
 				</section>				
