--- a/mon_cv_github_2.html
+++ b/mon_cv_github_2.html
@@ -21,7 +21,7 @@
 		
 		<main>
 			<div>
-				<section class="experience">
+				<section>
 				<h2>Mon expérience</h2>	
 					<p>
 						<ul>
@@ -30,7 +30,7 @@
 					</p>
 				</section>				
 		
-				<section class="ambition">
+				<section>
 				<h2>Mes ambitions</h2>	
 					
 					<p>
@@ -41,7 +41,7 @@
 					</p>
 				</section>	
 			
-				<section class="formation">
+				<section>
 				<h2>Ma formation</h2>	
 					<p>
 						<ul>
