--- a/mon_cv_github_2.html
+++ b/mon_cv_github_2.html
@@ -20,7 +20,7 @@
 		</header>
 		
 		<main>
-			<div>
+			<div class="conteneur">
 				<section>
 				<h2>Mon expérience</h2>	
 					<p>
@@ -54,7 +54,7 @@
 		</main>
 		
 		<footer> 
-			<div>
+			<div class="conteneur">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.0696656721866!2d5.3801603156019535!3d49.16128588728561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47eb1c07d26407a5%3A0x4226fc2808320bf1!2s22+Rue+de+la+Belle+Vierge%2C+55100+Verdun!5e0!3m2!1sfr!2sfr!4v1448730005932" ></iframe>
 				<p>
 					<a class="_mail" href="mailto:benjamin.moncey@gmail.com">Me contacter</a>
